--- a/helloWorld.html
+++ b/helloWorld.html
@@ -12,8 +12,11 @@
 		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-		<h1>Hello world</h1>
+		<div id="wrap">
+			<h1>Hello world</h1>
+		</div>
 		<footer>
+			<p>Sticky footer</p>
 		</footer>
 	</body>
 </html>
